/*
SPDX-FileCopyrightText: 2022-present Open Networking Foundation <info@opennetworking.org>

SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

package atomix.multiraft.list.v1;

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "gogoproto/gogo.proto";

message ListListener {
    uint64 index = 1 [
        (gogoproto.casttype) = "github.com/atomix/multi-raft-storage/api/atomix/multiraft/v1.Index"
    ];
}

message ListValue {
    string value = 1;
}

message ListInput {
    oneof input {
        SizeInput size = 1;
        AppendInput append = 2;
        InsertInput insert = 3;
        GetInput get = 4;
        SetInput set = 5;
        RemoveInput remove = 6;
        ClearInput clear = 7;
        EventsInput events = 8;
        ItemsInput items = 9;
    }
}

message ListOutput {
    oneof output {
        SizeOutput size = 1;
        AppendOutput append = 2;
        InsertOutput insert = 3;
        GetOutput get = 4;
        SetOutput set = 5;
        RemoveOutput remove = 6;
        ClearOutput clear = 7;
        EventsOutput events = 8;
        ItemsOutput items = 9;
    }
}

message SizeInput {

}

message SizeOutput {
    uint32 size = 1;
}

message ContainsInput {
    Value value = 1 [
        (gogoproto.nullable) = false
    ];
}

message ContainsOutput {
    bool contains = 1;
}

message AppendInput {
    Value value = 1 [
        (gogoproto.nullable) = false
    ];
}

message AppendOutput {

}

message GetInput {
    uint32 index = 1;
}

message GetOutput {
    Item item = 1 [
        (gogoproto.nullable) = false
    ];
}

message SetInput {
    uint32 index = 1;
    Value value = 2 [
        (gogoproto.embed) = true,
        (gogoproto.nullable) = false
    ];
}

message SetOutput {
    Item item = 1 [
        (gogoproto.nullable) = false
    ];
}

message InsertInput {
    uint32 index = 1;
    Value value = 2 [
        (gogoproto.embed) = true,
        (gogoproto.nullable) = false
    ];
}

message InsertOutput {
    Item item = 1 [
        (gogoproto.nullable) = false
    ];
}

message RemoveInput {
    uint32 index = 1;
}

message RemoveOutput {
    Item item = 1 [
        (gogoproto.nullable) = false
    ];
}

message ClearInput {

}

message ClearOutput {

}

message EventsInput {

}

message EventsOutput {
    Event event = 1 [
        (gogoproto.nullable) = false
    ];
}

message Event {
    uint32 index = 1;

    oneof event {
        Appended appended = 2;
        Inserted inserted = 3;
        Updated updated = 4;
        Removed removed = 5;
    }

    message Appended {
        Value value = 1 [
            (gogoproto.nullable) = false
        ];
    }

    message Inserted {
        Value value = 1 [
            (gogoproto.nullable) = false
        ];
    }

    message Updated {
        Value value = 1 [
            (gogoproto.nullable) = false
        ];
        Value prev_value = 2 [
            (gogoproto.nullable) = false
        ];
    }

    message Removed {
        Value value = 1 [
            (gogoproto.nullable) = false
        ];
    }
}

message ItemsInput {
    bool watch = 1;
}

message ItemsOutput {
    Item item = 1 [
        (gogoproto.nullable) = false
    ];
}

message Item {
    uint32 index = 1;
    Value value = 2 [
        (gogoproto.embed) = true,
        (gogoproto.nullable) = false
    ];
}

message Value {
    bytes value = 1;
}
